--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header nav a:hover {
 
 .progress-fill {
   height: 100%;
-  background-color: #ff2800;
+  background-color: #851313;
   border-radius: 8px 0 0 8px;
 }
 
@@ -125,7 +125,7 @@ header nav a:hover {
 .start-button {
   padding: 1rem 3rem;
   font-size: 1.3rem;
-  background-color: #ff2800;
+  background-color: #851313;
   color: white;
   border: none;
   border-radius: 25px;
@@ -227,7 +227,7 @@ header nav a:hover {
 
 .f1-comparison {
   font-size: 2rem;
-  color: #ff2800;
+  color: #851313;
   font-weight: bold;
   margin-bottom: 1rem;
 }
@@ -252,7 +252,7 @@ header nav a:hover {
 
 .card-progress .progress-fill {
   height: 100%;
-  background-color: #ff2800;
+  background-color: #851313;
   border-radius: 10px 0 0 10px;
 }
 
@@ -260,7 +260,7 @@ header nav a:hover {
   padding: 1rem 2rem;
   font-size: 1.5rem;
   border-radius: 25px;
-  background-color: #ff2800;
+  background-color: #851313;
   color: white;
   border: none;
   cursor: pointer;
